--- a/document/main.tex
+++ b/document/main.tex
@@ -340,7 +340,7 @@ Given the possibility of modeling conceptual knowledge, the next step is to asse
 \section{A Proposed Approach for Knowledge-Based Notifications}
 % bespoke paper (focused on notifications - fse)
 % TODO proof-read and integrate with the rest of paper
-Program analysis tools could improve the ability to communicate with developers by aligning notifications with the experience and knowledge of the developer using the tool.
+Program analysis tools could improve communication with developers by aligning notifications with the experience and knowledge of the developer using the tool.
 For example, FindBugs provides the following notification:
 
 \vspace*{-1ex}
@@ -382,7 +382,7 @@ are cheap to fix~\cite{Ayewah:2008:FindBugs}. For example, there are static anal
 lead to unsafe thread interactions. Developers have been able to eliminate many defects that were previously overlooked at large companies~\cite{Ayewah:2010:GFF} using the warnings produced
 by static analysis tools. 
 Despite the benefits of using static analysis tools to find bugs, consistent usage of these tools is not very frequent~\cite{Ayewah:2008:FindBugs}. 
-There have been studies to investigate ways of improving static analysis tools. However, none look at what the tools do or can do for a developer, what tools developers use, \emph{and} why~\cite{Bessey:2010:Coverity,Khoo:2008:PathProjection}. 
+There have been studies to investigate ways of improving static analysis tools. However, none explore \emph{why} they do or do not use existing tools~\cite{Bessey:2010:Coverity,Khoo:2008:PathProjection}. 
 
 \subsubsection{Research questions.}
 \begin{labeling}{questions}
