--- a/document/main.tex
+++ b/document/main.tex
@@ -334,7 +334,7 @@ To accurately create models, I need to be able to attribute code changes to a sp
 Therefore, I propose using version control to automate and ease the process of assigning code contributions to a given developer. 
 Version control is also useful for determining how recently a developer has made concept-specific code contributions, which I found can be an important factor when using experience as a proxy for knowledge~\cite{johnson2015bespoke}. % TODO cite vlhcc here if accepted!
 I will discuss my approach in more detail in Section~\ref{sec:eval}.
-Given the possibility of modeling conceptual knowledge, the next step is to assess the use of these models to determine appropriate feedback to give to the developer in a given notification.
+Given the ability to model concept knowledge, the next step is to assess the use of these models to determine appropriate feedback to give to the developer in a given notification.
 
 
 \section{A Proposed Approach for Knowledge-Based Notifications}
