--- a/document/main.tex
+++ b/document/main.tex
@@ -321,7 +321,7 @@ I need to assess knowledge with a wide range of developers outside of academia, 
 
 \vspace*{0.5em}
 
-\noindent \textbf{Establish Validity and Reliability.} To validate my concept inventory, I conducted item analysis~\cite{gorsuch1997exploratory}. The purpose of item analysis is to determine how effective your test, and the items on it, are. The primary goal in the scope of my research was the determine which questions may be considered too easy, too hard, or not fair. From the item analysis, I was able to remove 1 question that, according to my analyses, was not effective.
+\noindent \textbf{Establish Validity and Reliability.} To validate my concept inventory, I conducted item analysis~\cite{gorsuch1997exploratory}. The purpose of item analysis is to determine how effective your test, and the items on it, are. The primary goal in the scope of my research was the determine which questions may be considered too easy, too hard, or not fair. An example of an unfair question is a question where more than one response is a reasonable response, making it more difficult to determine the best response, even for an easy question. From the item analysis, I was able to remove 1 question that, according to my analyses, was not effective.
 
 
 I discuss the process that led to this final set of steps when I related study in Section~\ref{subsec:s3}.
